--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
             <h2>🔧 スプレッドシート設定</h2>
             <div class="input-group">
                 <label for="spreadsheet-url">スプレッドシートURL:</label>
-                <input type="text" id="spreadsheet-url" placeholder="https://docs.google.com/spreadsheets/d/...">
+                <input type="text" id="spreadsheet-url" placeholder="https://docs.google.com/spreadsheets/d/..." value="https://docs.google.com/spreadsheets/d/19Yt6tvo0PlP_9gA6R1XZtlNvmEE2o08z4p3_v0nEM80/edit?pli=1&gid=0#gid=0">
             </div>
             <button class="btn" onclick="loadSpreadsheet()">データを読み込む</button>
         </div>
